# Impatiens

./: .gitignore  CMakeLists.txt  README.md
include/impatiens/: Impatiens.hpp  Macros.hpp  Runtime.hpp  Traits.hpp
src/: CMakeLists.txt  Main.cpp  Runtime.cpp
test/: CMakeLists.txt  Main.cpp
